try to add  -webkit-appearance: none to avoid date issue on mobile

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -531,6 +531,7 @@ input[type=number] {
 
 #birthdate {
   color: white;
+  -webkit-appearance: none;
 }
 
 .radioQuestion {
